--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=8080
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${database.url}
+spring.datasource.username=${database.username}
+spring.datasource.password=${database.password}
+
+spring.jpa.showSql=true
+spring.jpa.hibernate.ddl-auto=update
